--- a/src/index.html
+++ b/src/index.html
@@ -138,7 +138,7 @@ eleventyNavigation:
             <ul class="cs-card-group">
                 <li class="cs-item">
                     <picture class="cs-picture">
-                        <img class="cs-icon" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/lightbulb-red.svg" alt="icon" width="40" height="40" loading="lazy" decoding="async" aria-hidden="true">
+                        <img class="cs-icon" src="/assets/svgs/plan-svgrepo-com.svg" alt="icon" width="40" height="40" loading="lazy" decoding="async" aria-hidden="true">
                     </picture>
                     <h3 class="cs-h3">Design Phase</h3>
                     <p class="cs-item-text">
@@ -147,7 +147,7 @@ eleventyNavigation:
                 </li>
                 <li class="cs-item">
                     <picture class="cs-picture">
-                        <img class="cs-icon" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/puzzle-red.svg" alt="icon" width="40" height="40" loading="lazy" decoding="async" aria-hidden="true">
+                        <img class="cs-icon" src="/assets/svgs/coding-html-svgrepo-com.svg" alt="icon" width="40" height="40" loading="lazy" decoding="async" aria-hidden="true">
                     </picture>
                     <h3 class="cs-h3">Coding and Approval</h3>
                     <p class="cs-item-text">
@@ -156,7 +156,7 @@ eleventyNavigation:
                 </li>
                 <li class="cs-item">
                     <picture class="cs-picture">
-                        <img class="cs-icon" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/gears-red.svg" alt="icon" width="40" height="40" loading="lazy" decoding="async" aria-hidden="true">
+                        <img class="cs-icon" src="/assets/svgs/optimization-svgrepo-com.svg" alt="icon" width="40" height="40" loading="lazy" decoding="async" aria-hidden="true">
                     </picture>
                     <h3 class="cs-h3">Optimization, Hosting, and Domain</h3>
                     <p class="cs-item-text">
@@ -178,12 +178,12 @@ eleventyNavigation:
                 <h2 class="cs-title">Quality Over Quantity</h2>
                 <p class="cs-text">
                     The process of creating a high performing website doesn't stop when the site is online. 
-                    By monitoring all of our clients' websites we ensure that your sit gets the visibility it deserves.
+                    By monitoring all of our clients' websites we ensure that your site gets the visibility it deserves.
                 </p>
             </div>
             <ul class="cs-card-group">
                 <li class="cs-item">
-                    <img class="cs-icon" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons%2Fballs1.svg" loading="lazy" decoding="async" alt="icon" width="48" height="48" aria-hidden="true">
+                    <img class="cs-icon" src="/assets/svgs/analytics-svgrepo-com.svg" loading="lazy" decoding="async" alt="icon" width="48" height="48" aria-hidden="true">
                     <!-- Text Grouped For Flexbox-->
                     <div class="cs-text-group">
                         <h3 class="cs-h3">Google Analytics</h3>
@@ -194,7 +194,7 @@ eleventyNavigation:
                     </div>
                 </li>
                 <li class="cs-item">
-                    <img class="cs-icon" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons%2Fballs2.svg" loading="lazy" decoding="async" alt="icon" width="48" height="48" aria-hidden="true">
+                    <img class="cs-icon" src="/assets/svgs/communication-3-svgrepo-com.svg" loading="lazy" decoding="async" alt="icon" width="48" height="48" aria-hidden="true">
                     <!-- Text Grouped For Flexbox-->
                     <div class="cs-text-group">
                         <h3 class="cs-h3">Not a One and Done</h3>
@@ -205,7 +205,7 @@ eleventyNavigation:
                     </div>
                 </li>
                 <li class="cs-item">
-                    <img class="cs-icon" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons%2Fballs3.svg" loading="lazy" decoding="async" alt="icon" width="48" height="48" aria-hidden="true">
+                    <img class="cs-icon" src="/assets/svgs/handshake-svgrepo-com.svg" loading="lazy" decoding="async" alt="icon" width="48" height="48" aria-hidden="true">
                     <!-- Text Grouped For Flexbox-->
                     <div class="cs-text-group">
                         <h3 class="cs-h3">Leave it To Us</h3>
@@ -218,7 +218,7 @@ eleventyNavigation:
             </ul>
             <a href="" class="cs-button-solid">Contact Us</a>
             <!--Floating Arrow Graphic-->
-            <img class="cs-floater" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images%2FGraphics%2Forange-arrow.svg" alt="arrow" loading="lazy" decoding="async" aria-hidden="true">
+            <img class="cs-floater" src="/assets/svgs/down-curved-arrow-svgrepo-com.svg" alt="arrow" loading="lazy" decoding="async" aria-hidden="true">
         </div>
     </section>
                                 
@@ -385,9 +385,9 @@ eleventyNavigation:
             <!-- Left section -->
             <div class="cs-card">
                 <picture class="cs-picture">
-                    <source media="(max-width: 600px)" srcset="https://csimg.nyc3.digitaloceanspaces.com/Reviews/dentist-m.jpg">
-                    <source media="(min-width: 601px)" srcset="https://csimg.nyc3.digitaloceanspaces.com/Reviews/dentist.jpg">
-                    <img loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/Reviews/dentist.jpg" alt="man at dentist" width="328" height="200" aria-hidden="true">
+                    <source media="(max-width: 600px)" srcset="/assets/images/pexels-pixabay-260447.jpg">
+                    <source media="(min-width: 601px)" srcset="/assets/images/pexels-pixabay-260447.jpg">
+                    <img loading="lazy" decoding="async" src="/assets/images/pexels-pixabay-260447.jpg" alt="man at dentist" width="328" height="200" aria-hidden="true">
                 </picture>
                 <div class="cs-content">
                     <span class="cs-topper">Redefining Martial Arts</span>
@@ -405,7 +405,7 @@ eleventyNavigation:
                 <p class="cs-review-p">
                     Nisl sit congue justo mi fermentum orci, vitae vel. Consequat nunc varius massa pulvinar non in. Neque, massa pharetra elementum at faucibus in. Amet ullamcorper convallis in vel sagittis amet. Neque quam nibh vulputate vel, ac ut. Vulputate lectus laoreet laoreet porttitor condimentum erat.
                 </p>
-                <span class="cs-review-name">⎯ Marie-Claire</span>
+                <span class="cs-review-name">⎯ Tyler Roberts</span>
             </div>
         </div>
     </section>
