--- a/src/content/pages/contact.html
+++ b/src/content/pages/contact.html
@@ -3,6 +3,9 @@ title: 'Contact'
 description: 'Meta description for the page'
 preloadImg: '/assets/images/cabinets2.jpg'
 permalink: 'contact/'
+eleventyNavigation:
+    key: Contact
+    order: 500
 ---
 
 {% extends "layouts/base.html" %}
