--- a/src/content/pages/services.html
+++ b/src/content/pages/services.html
@@ -1,10 +1,10 @@
 ---
-title: 'Projects'
+title: 'Services'
 description: 'Meta description for the page'
 preloadImg: '/assets/images/cabinets2.jpg'
-permalink: 'projects/'
+permalink: 'services/'
 eleventyNavigation:
-    key: Projects
+    key: Services
     order: 300
 ---
 
