--- a/src/index.html
+++ b/src/index.html
@@ -48,37 +48,33 @@ eleventyNavigation:
                     Tincidunt lobortis feugiat vivamus at augue eget arcu dictum varius. Nibh tortor id aliquet lectus proin nibh condimentum.
                 </p>
                 <a href="" class="cs-button-solid">Explore More</a>
-                <a href="" class="cs-button-transparent">
-                    <img class="cs-img" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/Hero/play.svg" alt="play icon" width="17" height="17" aria-hidden="true">
-                    Learn More
-                </a>
             </div>
             <!--Service Cards-->
             <ul class="cs-card-group">
                 <li class="cs-item">
                     <a class="cs-link" href="">
                         <span class="cs-number">01</span>
-                        <h2 class="cs-h2">Choose Place Activity and Time</h2>
+                        <h2 class="cs-h2">Mobile-First Design</h2>
                         <p class="cs-item-text">
-                            Dui sapien eget mi proin sed libero enim sed. Commodo elit at imperdiet dui accumsan sit amet nulla facilisi.
+                            The vast majority of internet traffic is done on mobile devices which is why our websites are built to perform best on smaller screens.
                         </p>
                     </a>
                 </li>
                 <li class="cs-item">
                     <a class="cs-link" href="">
-                        <span class="cs-number">01</span>
-                        <h2 class="cs-h2">Find People With The Same Ideas</h2>
+                        <span class="cs-number">02</span>
+                        <h2 class="cs-h2">Fully Optimized</h2>
                         <p class="cs-item-text">
-                            Dui sapien eget mi proin sed libero enim sed. Commodo elit at imperdiet dui accumsan sit amet nulla facilisi.
+                            What's a visually impressive website if it doesn't work well under the hood? Our websites score 98-100 on Google Pagespeed.
                         </p>
                     </a>
                 </li>
                 <li class="cs-item">
                     <a class="cs-link" href="">
-                        <span class="cs-number">01</span>
-                        <h2 class="cs-h2">Start Chat And Ask Them To Go</h2>
+                        <span class="cs-number">03</span>
+                        <h2 class="cs-h2">Growth Oriented</h2>
                         <p class="cs-item-text">
-                            Dui sapien eget mi proin sed libero enim sed. Commodo elit at imperdiet dui accumsan sit amet nulla facilisi.
+                            Our websites aren't meant to be a one and done fix for small businesses. We seek to provide business owners the online visibility they deserve.
                         </p>
                     </a>
                 </li>
