--- a/src/content/pages/reviews.html
+++ b/src/content/pages/reviews.html
@@ -1,10 +1,10 @@
 ---
-title: 'Reviews'
+title: 'Portfolio'
 description: 'Meta description for the page'
 preloadImg: '/assets/images/cabinets2.jpg'
-permalink: 'reviews/'
+permalink: 'portfolio/'
 eleventyNavigation:
-    key: Reviews
+    key: Portfolio
     order: 400
 ---
 
